test/testdata/classes/inheritance/super_blank_property_access_error.lox
class Superclass {}

class Subclass < Superclass {
  method() {
    // error: '_' is not a valid property name
    // lint error: '_' is not a valid property name
    super._;
  }
}

var subclass = Subclass();
subclass.method();
